# RelSync

./: README.md  pyproject.toml  relsync
.github/workflows/: bump-tag-release-main.yaml
relsync/: cli.py  distribution.py  git.py  helm.py  semver.py  submodules.py  utils.py
